fixed contact fields on mobile

--- a/style7.css
+++ b/style7.css
@@ -95,6 +95,7 @@ h1, h2, h3, h4, h5, h6 {
     font-family: 'Overpass';
     font-size: 20px;
     padding-left: 10px;
+    color: red;
 }
 
 .dropbtn2{
@@ -509,7 +510,9 @@ iframe{
 
 
   .field{
-    margin: 15px 7%;
+    margin-top: 15px;
+    margin-left: 7%;
+    margin-right: 12%;
   }
 
 #title{
@@ -612,7 +615,5 @@ iframe{
     top: 15px;
     right: 35px;
     }
-
-
 
 }
